[package]
name = "fluxc_ir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.78"
cranelift-module = "0.78"
cranelift-jit = "0.78"
cranelift-native = "0.78"
log = "0.4"

fluxc_ast = { path = "../fluxc_ast" }
fluxc_types = { path =  "../fluxc_types" }
fluxc_walker = { path =  "../fluxc_walker" }
