[package]
name = "fluxc_main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

fluxc_ast = { path =  "../fluxc_ast" }
fluxc_ast_passes = { path =  "../fluxc_ast_passes" }
fluxc_codegen = { path =  "../fluxc_codegen" }
fluxc_parser = { path =  "../fluxc_parser" }
