[package]
name = "fluxc_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

fluxc_lexer = { path =  "../fluxc_lexer" }
fluxc_parser = { path =  "../fluxc_parser" }
fluxc_codegen = { path =  "../fluxc_codegen" }
