[package]
name = "fluxc_parser"
version = "0.0.0"
authors = ["SkyezerFox <actuallyori@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1"
pest = { version = "2" } 
pest_derive = "2"
tracing = "0.1"

fluxc_ast = { path =  "../fluxc_ast" }
fluxc_types = { path = "../fluxc_types" }
fluxc_errors = { path = "../fluxc_errors" }

[dev-dependencies]
tracing-subscriber = "0.3"
tracing-test = "0.2"
fluxc_span = { path = "../fluxc_span" }
