[package]
name = "styxc_ir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.76"
cranelift-module = "0.76"
cranelift-jit = "0.76"
cranelift-object = "0.76"
target-lexicon = "0.12"

styxc_ast = { path = "../styxc_ast" }
