[package]
name = "styxc_ir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.77"
cranelift-module = "0.77"
cranelift-jit = "0.77"
cranelift-native = "0.77"
log = "0.4"

styxc_ast = { path = "../styxc_ast" }
styxc_types = { path =  "../styxc_types" }
