[package]
name = "styxc_main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

styxc_ast = { path =  "../styxc_ast" }
styxc_ir = { path =  "../styxc_ir" }
styxc_parser = { path =  "../styxc_parser" }
styxc_lexer = { path =  "../styxc_lexer" }
